Actions
Bug #10787
closedrsa: NULL pointer errors
Start date:
2019-04-14
Due date:
% Done:
100%
Estimated time:
Difficulty:
Medium
Tags:
Gerrit CR:
Description
NULL pointer errors:
In file included from ../../common/sys/param.h:48:0, from ../../common/sys/t_lock.h:38, from ../../common/sys/systm.h:39, from ../../common/crypto/io/rsa.c:31: ../../common/sys/null.h:32:14: error: initialization makes integer from pointer without a cast [-Werror=int-conversion] #define NULL ((void *)0) ^ ../../common/crypto/io/rsa.c:321:55: note: in expansion of macro 'NULL' static crypto_kcf_provider_handle_t rsa_prov_handle = NULL; ^~~~ ../../common/crypto/io/rsa.c: In function '_fini': ../../common/crypto/io/rsa.c:344:22: error: comparison between pointer and integer [-Werror] if (rsa_prov_handle != NULL) { ^~ ../../common/crypto/io/rsa.c:348:19: error: assignment makes integer from pointer without a cast [-Werror=int-conversion] rsa_prov_handle = NULL; ^ cc1: all warnings being treated as errors
Updated by Electric Monk about 3 years ago
- Status changed from In Progress to Closed
- % Done changed from 90 to 100
git commit b4a44cf294b47530f872176be732538fdf3536a0
commit b4a44cf294b47530f872176be732538fdf3536a0 Author: Toomas Soome <tsoome@me.com> Date: 2019-04-19T20:13:21.000Z 10787 rsa: NULL pointer errors Reviewed by: Andy Stormont <astormont@racktopsystems.com> Reviewed by: Sebastian Wiedenroth <sebastian.wiedenroth@skylime.net> Approved by: Dan McDonald <danmcd@joyent.com>
Actions